--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Pong MQTT Test</h1>
+  <p>This is a link - <a href="pong_mqtt - upload/index.html"> Link </a></p>
 
 </body>
 </html>
