--- a/pong_mqtt - upload/index.html
+++ b/pong_mqtt - upload/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Pong Variants</h1>
+  <p><a href="mqtt_simplePongFrame_custom/index.html"> Variant 1 </a></p>
 
 </body>
 </html>
